fix(theme): overlap between navbar links and log (close: #79)

--- a/packages/vuepress-theme-vt/styles/index.styl
+++ b/packages/vuepress-theme-vt/styles/index.styl
@@ -181,7 +181,7 @@ table {
   &.no-sidebar {
     .navbar {
       .home-link {
-        min-width: initial;
+        min-width: auto;
         background-color: initial;
       }
     }
